--- a/src/pages/postos/styles.css
+++ b/src/pages/postos/styles.css
@@ -1,23 +1,7 @@
-.container-config {
+.container-postos {
     margin: 0 auto 0;
     max-width: 800px;
     display: flex;
     flex-direction: column;
-  }
-
-  .conf-acoes{
-    float: left;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin: 20px;
-    padding: 10px;
-    border: 1px solid #1264ad;
-    border-radius: 5px;
-    transition: transform .2s;
-  }
-
-  .conf-acoes:hover{
-    cursor: pointer;
-    transform: scale(1.1);
+    margin-top: 22px;
   }
